# gitlab-pipeline-analyzer

./: .coveragerc  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLIENT_README.md  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  IMPROVED_TOOL_PROMPTS.md  MR_BRANCH_EXTRACTION_SUMMARY.md  Makefile  PUBLISHING_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST_v0.2.1.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.5.md  SEARCH_FEATURE_DOCS.md  SUCCESS.md  architecture_summary.py  check_setup.py  config.py  coverage.json  display_tools.py  example.py  example_client.py  get_job_result.py  gitlab_analyzer.py  http_client_example.py  http_server.py  list_tools.py  mcp_cache.db  mypy.ini  pyproject.toml  pytest.ini  query_pipeline.py  query_single_job.py  (+20 more)
.cursor/rules/: publishing-guide.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: code-generation.instructions.md
.github/prompts/: publish-mcp.md  publish-mcp.prompt.md  quality.prompt.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  pre-commit.yml  release.yml  security.yml  test.yml
docs/: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REFERENCE.md  DATABASE_CONFIGURATION.md  DATABASE_DEBUG_FEATURES.md  DEPLOYMENT.md  ERROR_DEDUPLICATION.md  Makefile  README.md  STREAMLINED_ARCHITECTURE.md  WEBHOOK_ARCHITECTURE_SUMMARY.md  _config.yml  conf.py  configuration.rst  deployment.rst  environment_variables.rst  examples.rst  gitlab_analysis_flow.md  index.rst  installation.rst  mcp_tools.rst  prompts.rst  requirements.txt  streamlined_tools.md  tool_reference.rst  tools_and_resources.rst  troubleshooting.rst
docs/_static/: custom.css
docs/tools/: get_cleaned_job_trace.md
examples/: __init__.py  tool_demos.py
scripts/: check_log_analysis.py  release.sh
scripts/examples/: test_all_resources.py  test_cache_cleanup.py  test_file_resource_mode.py
src/gitlab_analyzer/: __init__.py  version.py
src/gitlab_analyzer/analysis/: root_cause_analyzer.py  summarizer.py
src/gitlab_analyzer/api/: client.py
src/gitlab_analyzer/cache/: auto_cleanup.py  mcp_cache.py  models.py
src/gitlab_analyzer/core/: analysis.py  pipeline_info.py
src/gitlab_analyzer/mcp/: __init__.py  server.py  tools.py
src/gitlab_analyzer/mcp/cache/: __init__.py  manager.py  models.py
src/gitlab_analyzer/mcp/prompts/: advanced.py  educational.py  investigation.py  performance.py
src/gitlab_analyzer/mcp/resources/: __init__.py  analysis.py  cache_resources.py  error.py  file.py  job.py  pipeline.py  utils.py
src/gitlab_analyzer/mcp/servers/: server.py  webhook_integration.py
src/gitlab_analyzer/mcp/services/: error_analysis_service.py  error_service.py
src/gitlab_analyzer/mcp/tools/: __init__.py  analysis_tools.py  cache_tools.py  clean_trace_tools.py  failed_pipeline_analysis.py  info_tools.py  job_analysis_tools.py  log_tools.py  pagination_tools.py  pytest_tools.py  resource_access_tools.py  search_tools.py  streamlined_analysis.py  tools.py  trace_analysis_tools.py  utils.py
src/gitlab_analyzer/models/: job_info.py  log_entry.py  pipeline_analysis.py  pytest_models.py
src/gitlab_analyzer/parsers/: __init__.py  base_parser.py  django_pytest_parser.py  framework_registry.py  jest_parser.py  log_parser.py  pytest_parser.py  sonarqube_parser.py
src/gitlab_analyzer/patterns/: error_patterns.py
src/gitlab_analyzer/utils/: __init__.py  utils.py
src/gitlab_analyzer/webhook/: processor.py
tests/: test_cache_integration.py  test_error_model_base_parser_debug.py  test_error_model_jira_debug.py  test_final_coverage_push.py  test_integration.py  test_jest_parser_coverage_boost.py  test_log_parser.py  test_mcp_analysis_resource.py  test_mcp_cache.py  test_mcp_cache_basic.py  test_mcp_info_utilities.py  test_mcp_pytest_tools.py  test_mcp_server.py  test_mcp_tools_coverage.py  test_mcp_tools_summary.md  test_parser_registry_system.py  test_pytest_parser_basic.py  test_quick_coverage_push.py  test_root_cause_coverage_boost.py  test_server_integration.py  test_sonarqube_parser_coverage_boost.py  test_utils_coverage_boost.py
tests/analysis/: test_root_cause_analyzer.py
tests/cache/: __init__.py  test_manager.py  test_models.py
tests/mcp/resources/: test_limited_resources.py
tests/parsers/: test_eslint_parser.py  test_jest_parser_enhanced.py
tests/patterns/: test_error_patterns_fixed.py
tests/resources/: test_analysis.py  test_error.py  test_file.py  test_file_new.py  test_integration.py  test_job.py  test_pipeline.py  test_utils.py
tests/tools/: test_cache_tools.py  test_failed_pipeline_analysis.py  test_resource_access_tools.py  test_search_tools.py  test_tools_utils.py
tests/utils/: test_pipeline_validation.py  test_utils.py
